update with comments

--- a/Sparkify_investigation_prepare.ipynb
+++ b/Sparkify_investigation_prepare.ipynb
@@ -5,9 +5,7 @@
    "metadata": {},
    "source": [
     "# Sparkify Project Workspace\n",
-    "This workspace contains a tiny subset (128MB) of the full dataset available (12GB). Feel free to use this workspace to build your project, or to explore a smaller subset with Spark before deploying your cluster on the cloud. Instructions for setting up your Spark cluster is included in the last lesson of the Extracurricular Spark Course content.\n",
-    "\n",
-    "You can follow the steps below to guide your data analysis and model building portion of this project."
+    "This workspace contains a tiny subset (128MB) of the full dataset available (12GB). "
    ]
   },
   {
@@ -51,8 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load and Clean Dataset\n",
-    "In this workspace, the mini-dataset file is `mini_sparkify_event_data.json`. Load and clean the dataset, checking for invalid or missing data - for example, records without userids or sessionids. "
+    "# Load and Clean Dataset"
    ]
   },
   {
@@ -109,15 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis\n",
-    "When you're working with the full dataset, perform EDA by loading a small subset of the data and doing basic manipulations within Spark. In this workspace, you are already provided a small subset of data you can explore.\n",
-    "\n",
-    "### Define Churn\n",
-    "\n",
-    "Once you've done some preliminary analysis, create a column `Churn` to use as the label for your model. I suggest using the `Cancellation Confirmation` events to define your churn, which happen for both paid and free users. As a bonus task, you can also look into the `Downgrade` events.\n",
-    "\n",
-    "### Explore Data\n",
-    "Once you've defined churn, perform some exploratory data analysis to observe the behavior for users who stayed vs users who churned. You can start by exploring aggregates on these two groups of users, observing how much of a specific action they experienced per a certain time unit or number of songs played."
+    "# Exploratory Data Analysis"
    ]
   },
   {
@@ -153,6 +142,7 @@
     }
    ],
    "source": [
+    "# Investigate the structure of the dataset\n",
     "df.printSchema()"
    ]
   },
@@ -173,6 +163,7 @@
     }
    ],
    "source": [
+    "# How many logs are available in the \"mini\" dataset\n",
     "df.count()"
    ]
   },
@@ -845,13 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering\n",
-    "Once you've familiarized yourself with the data, build out the features you find promising to train your model on. To work with the full dataset, you can follow the following steps.\n",
-    "- Write a script to extract the necessary features from the smaller subset of data\n",
-    "- Ensure that your script is scalable, using the best practices discussed in Lesson 3\n",
-    "- Try your script on the full data set, debugging your script if necessary\n",
-    "\n",
-    "If you are working in the classroom workspace, you can just extract features based on the small subset of data contained here. Be sure to transfer over this work to the larger dataset when you work on your Spark cluster."
+    "# Feature Engineering"
    ]
   },
   {
@@ -3303,7 +3288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
